--- a/Carnap-Server/static/css/exercises.css
+++ b/Carnap-Server/static/css/exercises.css
@@ -1,3 +1,7 @@
+div:has(> div.exercise) {
+    display: grid;
+}
+
 .exercise {
     display:inline-block;
     position:relative;
@@ -330,7 +334,7 @@
     min-width:240pt;
     padding-bottom:5pt;
     overflow:auto;
-    max-height:100%
+    max-height:100%;
 }
 
 .proofDisplay .subproof {
@@ -343,6 +347,11 @@
 
 .proofDisplay .subproof div > span:nth-child(2){
     padding-left: 5pt;
+}
+
+/* New CSS rule to ensure uniform font size across all rows */
+.proofDisplay .line {
+    font-size: 16px;
 }
 
 .montagueDisplay span.rule, .fitchDisplay span.rule, .lemmonDisplay span.rule{
