--- a/Carnap-Server/static/css/exercises.css
+++ b/Carnap-Server/static/css/exercises.css
@@ -378,13 +378,13 @@ div:has(> div.exercise) {
 }
 
 .montagueDisplay .qed div {
-    border-left:1px solid black;
+    border-left: 0px;
     border-bottom:1px solid black;
     height:25px;
 }
 
 .montagueDisplay .subproof > div.qed {
-    padding-left: 5pt;
+    padding-left: 0pt;
 }
 
 .montagueDisplay .show-cross {
